@@ -175,6 +175,37 @@ class scenarioElement {
                 $_scenario->setLog(__('Tâche : ', __FILE__) . $this->getId() . __(' programmé à : ', __FILE__) . date('Y-m-d H:i:00', $next) . ' (+ ' . $time . ' min)');
             }
             return true;
+        } else if ($this->getType() == 'at') {
+            $at = $this->getSubElement('at');
+            $at = $at->getExpression();
+            $next = jeedom::evaluateExpression($at[0]->getExpression());
+            if (!is_numeric($next) || $next < 0) {
+                $_scenario->setLog(__('Erreur dans bloc (type A) : ', __FILE__) . $this->getId() . __(', heure programmé invalide : ', __FILE__) . $next);
+            }
+            if ($next < (date('Gi') + 1)) {
+                if (strlen($next) == 3) {
+                    $next = date('Y-m-d', strtotime('+1 day' . date('Y-m-d'))) . ' 0' . substr($next, 0, 1) . ':' . substr($next, 1, 3);
+                } else {
+                    $next = date('Y-m-d', strtotime('+1 day' . date('Y-m-d'))) . ' ' . substr($next, 0, 2) . ':' . substr($next, 2, 4);
+                }
+            } else {
+                if (strlen($next) == 3) {
+                    $next = date('Y-m-d') . ' 0' . substr($next, 0, 1) . ':' . substr($next, 1, 3);
+                } else {
+                    $next = date('Y-m-d') . ' ' . substr($next, 0, 2) . ':' . substr($next, 2, 4);
+                }
+            }
+            $next = strtotime($next);
+            $cron = new cron();
+            $cron->setClass('scenario');
+            $cron->setFunction('doIn');
+            $cron->setOption(array('scenario_id' => intval($_scenario->getId()), 'scenarioElement_id' => intval($this->getId()), 'second' => 0));
+            $cron->setLastRun(date('Y-m-d H:i:s'));
+            $cron->setOnce(1);
+            $cron->setSchedule(date('i', $next) . ' ' . date('H', $next) . ' ' . date('d', $next) . ' ' . date('m', $next) . ' * ' . date('Y', $next));
+            $cron->save();
+            $_scenario->setLog(__('Tâche : ', __FILE__) . $this->getId() . __(' programmé à : ', __FILE__) . date('Y-m-d H:i:00', $next));
+            return true;
         }
     }
 
