@@ -1,6 +1,7 @@
 ==== 23/11/2014
 
 - Amélioration du responsive design
+- Ajout bloc A dans les scénario, permet de lancer une action à une heure precise, mais calculé lors de l'éxecution du scénario
 
 ==== 22/11/2014
 
